2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* tests/kernel.at: correction to module test for new distros
	* AUTHORS: updated release files
	* doc/manual/news.texi: updated release files
	* NEWS: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* THANKS: updated release files

2007-05-06  Brian Bidulock  <bidulock@openss7.org>

	* strss7.spec.in: make GPL version more obvious

2007-05-03  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man8/perftest.8.man: updated perftest program
	* src/test/perftest.c: updated perftest program

	* doc/drafts/m2pa/draft-bidulock-sigtran-m2pa-ig-02.me: added next
	  version of M2PA IG

2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* tests/testsuite-inet_raw.at: testsuite factoring
	* tests/testsuite-inet_raw2.at: testsuite factoring
	* tests/testsuite-inet_sctp.at: testsuite factoring
	* tests/testsuite-inet_tcp.at: testsuite factoring
	* tests/testsuite-inet_udp.at: testsuite factoring
	* tests/testsuite-inet_udp2.at: testsuite factoring
	* tests/testsuite-m2pa.at: testsuite factoring
	* tests/testsuite-sctp.at: testsuite factoring
	* tests/testsuite-sctp_n.at: testsuite factoring
	* tests/testsuite-sctp_n2.at: testsuite factoring
	* tests/testsuite-sctp_t.at: testsuite factoring
	* tests/testsuite-timod.at: testsuite factoring
	* tests/testsuite-tirdwr.at: testsuite factoring
	* tests/testsuite-x400p-sl.at: testsuite factoring
	* tests/testsuite-xnet.at: testsuite factoring
	* tests/testsuite-xnet_thr.at: testsuite factoring

2007-04-12  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: corrected typo

2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: support for 2.6.20-1.2307.fc5
	* doc/manual/news.texi: support for 2.6.20-1.2307.fc5
	* src/include/ss7/lmi.h: support for 2.6.20-1.2307.fc5
	* src/modules/acb56/sdt_acb56.c: support for 2.6.20-1.2307.fc5
	* src/modules/cd/cd.c: support for 2.6.20-1.2307.fc5