@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: cci_sipt.7.man,v 0.9.2.6 2006/04/05 09:43:19 brian Exp $
+.\" @(#) $Id: cci_sipt.7.man,v 0.9.2.7 2007/05/07 18:38:46 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2006/04/05 09:43:19 $ by $Author: brian $
+.\" Last Modified $Date: 2007/05/07 18:38:46 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: cci_sipt.7.man,v $
+.\" Revision 0.9.2.7  2007/05/07 18:38:46  brian
+.\" - updated manual pages
+.\"
 .\" Revision 0.9.2.6  2006/04/05 09:43:19  brian
 .\" - moved .so line and updated headers
 .\"
@@ -100,7 +103,7 @@ sort-adjacent-labels
 .PP
 This Corrigendum describes the formats and rules that are specific to SIP-T.
 .[
-sipt-rfc
+siptrfc
 .]
 The Corrigendum must be used along with the generic CCI as defined in the main
 document when implementing a CCS provider that will be configured with the SIP-T
