@@ -1,1 +1,253 @@
 .so man9/str_open.9.man
+'\" rtp
+.\" -*- nroff -*- vim: ft=nroff nocin nosi
+.\"
+.\" @(#) $Id: strwput.9.man,v 0.9.2.3 2007/05/07 18:38:43 brian Exp $
+.\"
+.\" =========================================================================
+.\"
+.\" Copyright (c) 2001-2007  OpenSS7 Corporation <http://www.openss7.com/>
+.\"
+.\" All Rights Reserved.
+.\"
+.\" Permission is granted to make and distribute verbatim copies of this
+.\" manual provided the copyright notice and this permission notice are
+.\" preserved on all copies.
+.\"
+.\" Permission is granted to copy and distribute modified versions of this
+.\" manual under the conditions for verbatim copying, provided that the
+.\" entire resulting derived work is distributed under the terms of a
+.\" permission notice identical to this one
+.\" 
+.\" Since the Linux kernel and libraries are constantly changing, this
+.\" manual page may be incorrect or out-of-date.  The author(s) assume no
+.\" responsibility for errors or omissions, or for damages resulting from
+.\" the use of the information contained herein.  The author(s) may not
+.\" have taken the same level of care in the production of this manual,
+.\" which is licensed free of charge, as they might when working
+.\" professionally.  The author(s) will take no responsibility in it.
+.\" 
+.\" Formatted or processed versions of this manual, if unaccompanied by
+.\" the source, must acknowledge the copyright and authors of this work.
+.\"
+.\" -------------------------------------------------------------------------
+.\"
+.\" U.S. GOVERNMENT RESTRICTED RIGHTS.  If you are licensing this Software
+.\" on behalf of the U.S. Government ("Government"), the following
+.\" provisions apply to you.  If the Software is supplied by the Department
+.\" of Defense ("DoD"), it is classified as "Commercial Computer Software"
+.\" under paragraph 252.227-7014 of the DoD Supplement to the Federal
+.\" Acquisition Regulations ("DFARS") (or any successor regulations) and the
+.\" Government is acquiring only the license rights granted herein (the
+.\" license rights customarily provided to non-Government users).  If the
+.\" Software is supplied to any unit or agency of the Government other than
+.\" DoD, it is classified as "Restricted Computer Software" and the
+.\" Government's rights in the Software are defined in paragraph 52.227-19
+.\" of the Federal Acquisition Regulations ("FAR") (or any successor
+.\" regulations) or, in the cases of NASA, in paragraph 18.52.227-86 of the
+.\" NASA Supplement to the FAR (or any successor regulations).
+.\"
+.\" =========================================================================
+.\" 
+.\" Commercial licensing and support of this software is available from
+.\" OpenSS7 Corporation at a fee.  See http://www.openss7.com/
+.\" 
+.\" =========================================================================
+.\"
+.\" Last Modified $Date: 2007/05/07 18:38:43 $ by $Author: brian $
+.\"
+.\" -------------------------------------------------------------------------
+.\"
+.\" $Log: strwput.9.man,v $
+.\" Revision 0.9.2.3  2007/05/07 18:38:43  brian
+.\" - updated manual pages
+.\"
+.\" =========================================================================
+.R1
+bracket-label "\fR[\fB" "\fR]" "\fR, \fB"
+no-default-database
+database streams.refs
+accumulate
+move-punctuation
+abbreviate A
+join-authors ", " ", " " and "
+et-al " et al" 2 3
+abbreviate-label-ranges ".."
+sort-adjacent-labels
+.R2
+.so streams.macros
+.\"
+.\"
+.TH STRWPUT 9 "@PACKAGE_DATE@" "@PACKAGE@-@VERSION@" "@PACKAGE_TITLE@ DDI/DKI"
+.\"
+.\"
+.SH NAME
+.B strwput, strwsrv
+\- Stream head module write put and service procedures
+.\"
+.\"
+.SH SYNOPSIS
+.PP
+.B #include <sys/stream.h>
+.br
+.B #include <sys/strsubr.h>
+.HP
+.BI "int strwput(queue_t *" q ", mblk_t *" mp ");
+.PD 0
+.HP
+.BI "int strwsrv(queue_t *" q ");
+.PD
+.\"
+.\"
+.SH ARGUMENTS
+.PP
+.TP
+.I q
+message queue to service or upon which to place the message.
+.TP
+.I mp
+the message to place on the message queue.
+.\"
+.\"
+.SH INTERFACE
+.PP
+.IR STREAMS ,
+implementation specific.
+.\"
+.\"
+.SH DESCRIPTION
+.PP
+.BR strwput ()
+and
+.BR strwsrv ()
+are the write side put an service procedure for the Stream head,
+.BR sth (4),
+module.
+.\"
+.\"
+.SH USAGE
+.PP
+.BR strwput ()
+and
+.BR strwsrv ()
+are internal
+.B "@PACKAGE_TITLE@"
+implementations of Stream head module procedures that are exported for use in Stream head
+replacements and not intended to be used by
+.I STREAMS
+drivers or modules.
+.\"
+.\"
+.SH RETURN
+.PP
+These procedures always return zero and the return value is always ignored.
+.\"
+.\"
+.SH ERRORS
+.PP
+When
+.BR strwput ()
+fails, it fails silently.
+.BR strwput ()
+is always responsible for the disposition of the passed in message.
+.PP
+.BR strwsrv ()
+is always sucessful and is invoked only by the STREAMS scheduler.
+.\"
+.\"
+.SH CONTEXT
+.PP
+Neither the
+.BR strwput ()
+nor
+.BR strwsrv ()
+procedure should be called directly.
+.BR strwput ()
+should be invoked by calling
+.BR put (9)
+instead.
+.BR strwsrv ()
+should be invoked by calling
+.BR qenable (9)
+instead.
+.\"
+.\"
+.SH MP-STREAMS
+.PP
+These functions are MP-SAFE when called from the correct context.
+.\"
+.\"
+.SH NOTICES
+.PP
+.\"
+.\"
+.SH IMPLEMENTATION
+.PP
+.\"
+.\"
+.SH "SEE ALSO"
+.PP
+.IR qi_qopen (9),
+.IR qi_qclose (9),
+.IR qi_putp (9),
+.IR qi_srvp (9).
+.\"
+.\"
+.SH BUGS
+.PP
+.BR strwput ()
+and
+.BR strwsrv ()
+have no known bugs.
+.\"
+.\"
+.SH COMPATIBILITY
+.PP
+.BR strwput ()
+and
+.BR strwsrv ()
+are compatible with
+.IR "SVR 4.2 MP DDI/DKI" ,
+and systems based on
+.IR "SVR 4" ,
+with the following portability considerations:
+.IP \(em \w'\(em\(em'u
+.IP \(em
+.\"
+.PP
+See
+.BR STREAMS (9)
+for more compatibility information.
+.\"
+.\"
+.SH CONFORMANCE
+.PP
+.I "SVR 4.2 MP DDI/DKI"
+.[
+usldk
+.]
+.\"
+.\"
+.SH HISTORY
+.PP
+.BR strwput (),
+.BR strwsrv ()
+appear as part of
+.IR "SVR 4.0 STREAMS" .
+.[
+svr4spg
+.]
+.PP
+.BR strwput (),
+.BR strwsrv ()
+first appeared in 
+.IR "SVR 3" .
+.[
+svr3spg
+.]
+.\"
+.\"
+.[
+$LIST$
+.]
+.TI
